fix: dialog / top-bar z-index

--- a/components/card/card.component.scss
+++ b/components/card/card.component.scss
@@ -40,8 +40,6 @@
 }
 
 @mixin no-modal {
-  // force lower priority, otherwise sidenav will be "below" the non-modal dialog
-  z-index: 90 !important;
   padding: #{$nonModalPadding};
   top: #{$mainnavHeight};
   height: unset;
