--- a/styles/dialogs.scss
+++ b/styles/dialogs.scss
@@ -8,7 +8,6 @@ $cardActionHeight:77px;
   left:0;
   top:0;
   position:fixed;
-  z-index:$dialogZIndex;
 }
 .dialog-halign{
   display: flex;
